# pic1d

./: .gitignore  AUTHORS  ChangeLog  INSTALL-win.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  fdl.texi  pic1d.1  pic1d.dvi  pic1d.info  pic1d.ps  pic1d.texi
gnulib/: Makefile.am  Makefile.in
gnulib/m4/: gnulib-cache.m4
gnulib/src/: Makefile.am  Makefile.in
m4/: gnulib-comp.m4  wxwin.m4
src/: Makefile.am  Makefile.in  arguments.cpp  arguments.h  array.cpp  array.h  complex.cpp  complex.h  config.h  fourier.cpp  fourier.h  gl_draw.cpp  gl_draw.h  imaginary.cpp  imaginary.h  interface.cpp  interface.h  main.cpp  main.h  ode_solver.cpp  ode_solver.h  simulation.cpp  simulation.h
src/guis/: Makefile.am  Makefile.in  config.h  guis.h
src/guis/gnuplot/: Makefile.am  Makefile.in  config.h  gnuplot_i.cpp  gnuplot_i.h  gui.h  main.cpp  main.h
src/guis/null/: Makefile.am  Makefile.in  config.h  gui.h  main.cpp  main.h
src/guis/wxwidgets/: Makefile.am  Makefile.in  config.h  gl_canvas.cpp  gl_canvas.h  gl_interface.cpp  gl_interface.h  gui.h  main.cpp  main.h  main_frame.cpp  main_frame.h
src/guis/wxwidgets/images/: Makefile.am  Makefile.in  fast-forward.xpm  pause.xpm  play.xpm  reverse-play.xpm  rewind.xpm  stop.xpm
